# SpectralPhysics-Lab

./: .gitignore  AI_TASKS.md  PROJECT_CODE.txt  README.md  collect_code.py  pyproject.toml  test_new_architecture.py  test_new_features.py
configs/: pump_score.yaml  pump_thresholds.yaml  pump_train.yaml
data/pump/: current_motor.csv  current_pump.csv  profile.npz  report.md  train_motor_2.csv  train_pump_1.csv
examples/: atomic_valence_demo.py  atomic_valence_table_demo.py  generate_synthetic_pump_data.py  geophysics_1d_demo.py  geophysics_2d_health_demo.py  geophysics_2d_toy_demo.py  geophysics_health_demo.py  health_monitor_demo.ipynb  health_monitor_demo.py  material_defect_demo.py  material_health_demo.py  material_spectrum_guess_demo.py  medium_2d_modes_demo.py  medium_oscillators_demo.ipynb  ndt_synthetic_defect_demo.py  symmetric_newton_demo.ipynb
src/spectral_physics/: __init__.py  atoms.py  cli.py  diagnostics.py  geophysics_1d.py  geophysics_2d.py  grav_toy.py  io.py  ldos.py  material.py  materials.py  medium_1d.py  medium_2d.py  ndt.py  report.py  root_finding.py  spectrum.py  timeseries.py
tests/: test_atoms.py  test_diagnostics.py  test_diagnostics_features.py  test_geophysics_1d.py  test_grav_toy.py  test_io.py  test_ldos.py  test_material.py  test_material_features.py  test_materials.py  test_medium_1d.py  test_medium_2d.py  test_ndt.py  test_report.py  test_root_finding.py  test_spectrum.py  test_timeseries.py
