[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-physics-lab"
version = "0.1.0"
description = "Experimental spectral physics toolkit for diagnostics and anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "SpectralPhysics Team"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
]

[project.scripts]
spectral-health = "spectral_physics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spectral_physics = ["py.typed"]
