[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-physics-lab"
version = "0.1.0"
description = "Experimental spectral physics toolkit for diagnostics and anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Robert Paulig"}
]
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.scripts]
spectral-health = "spectral_physics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spectral_physics = ["py.typed"]

